# arxds

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
api/: index.html
cli/: index.html
docs/: api.md  cli.md  index.md
search/: search_index.json
site/: 404.html  index.html
site/api/: index.html
site/assets/javascripts/: bundle.f55a23d4.min.js
site/assets/javascripts/workers/: search.973d3a69.min.js
site/assets/stylesheets/: main.e53b48f4.min.css  main.e53b48f4.min.css.map  palette.06af60db.min.css  palette.06af60db.min.css.map
site/cli/: index.html
site/search/: search_index.json
src/arxds/: __init__.py  cli.py  fetch.py  io.py  transform.py  utils.py
tests/: test_cli_smoke.py
tmp-out/: test.jsonl
